Fix issue with overflowing custom inputs

--- a/admin/admin.css
+++ b/admin/admin.css
@@ -2851,6 +2851,9 @@ a {
     background: white;
     width: 18.125rem;
     max-width: 100%;
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
     height: 100%;
     border-right: 1px solid #ddd;
     overflow: auto;
@@ -2903,7 +2906,8 @@ a {
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
-    height: 100%; }
+    height: 100%;
+    overflow: hidden; }
   .app-view > .overlay {
     opacity: 0;
     visibility: hidden;
@@ -2941,6 +2945,10 @@ a {
   .checkbox-input > label {
     display: inline-block;
     margin-left: 1em; }
+
+.custom-input {
+  width: 100%;
+  overflow: auto; }
 
 .file-input > .value {
   margin: 0 0 .25em 0;
