--- a/admin/sass/components/app-view.sass
+++ b/admin/sass/components/app-view.sass
@@ -7,6 +7,7 @@
     background: white
     width: rem(290)
     max-width: 100%
+    flex: none
     height: 100%
     border-right: 1px solid #ddd
     overflow: auto
@@ -55,6 +56,7 @@
   > .content
     flex: 1
     height: 100%
+    overflow: hidden
 
   > .overlay
     opacity: 0
