--- a/admin/sass/components/custom-input.sass
+++ b/admin/sass/components/custom-input.sass
@@ -1,2 +1,5 @@
 .custom-input
   @extend .text-input
+
+  width: 100%
+  overflow: auto
